# SimpleEdgeGateway

./: .gitignore  pyproject.toml  readme.md  requirements.txt
config/: config.yaml
docs/: ApiSpec.md  Architecture.md  DatabaseDesign.md  ProjectManagement.md  Roadmap.md  TriggerSpec.md  collection_logic.md
src/common/: config_loader.py  db_handler.py
src/engine/: poller.py
src/tools/: gen_test_env.py
src/web/: api_v1.py  app.py  webmain.py
src/web/templates/: alerts.html  api_docs.html  history_detail.html  host_items.html  hosts.html  index.html  settings.html
